--- a/src/components/circles.css
+++ b/src/components/circles.css
@@ -8,16 +8,10 @@
   width: 145px;
 }
 
-/* .backgroundBox {
-  border: 5px solid black;
-  height: 900px;
-  width: 90%;
-  margin: 0 5% 0 5%;
-} */
-
 .dotCircle {
   position: fixed;
-  border: 3px dashed black;
+  background: black;
+  border: 5px solid black;
   height: 55px;
   width: 55px;
   border-radius: 50%;
@@ -29,92 +23,101 @@
 }
 
 .blueCircle {
-  background: blue;
+  background: #124e78;
   height: 55px;
   width: 55px;
   border-radius: 50%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: all 1s;
-  box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
-  animation: pulse 2s infinite;
-  margin: 50px;
-}
-.redCircle {
-  background: red;
-  height: 55px;
-  width: 55px;
-  border-radius: 50%;
-  position: absolute;
-  top: 0;
-  right: 0;
-  transition: all 1s;
-  box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
-  animation: pulse 2s infinite;
-  margin: 50px;
-}
-.greenCircle {
-  background: green;
-  height: 55px;
-  width: 55px;
-  border-radius: 50%;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  transition: all 1s;
-  box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
-  animation: pulse 2s infinite;
-  margin: 50px;
-}
-.greyCircle {
-  background: grey;
-  height: 55px;
-  width: 55px;
-  border-radius: 50%;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  transition: all 1s;
-  box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
-  animation: pulse 2s infinite;
-  margin: 50px;
-}
-
-.circleTransition1 {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  transition: all 1s ease-in;
-  margin: 0;
+  transition: all 1s;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+  animation: pulse 2s infinite;
 }
 
-.circleTransition2 {
+.redCircle {
+  background: #6e0e0a;
+  height: 55px;
+  width: 55px;
+  border-radius: 50%;
   position: absolute;
   top: 50%;
   right: 50%;
   transform: translate(50%, -50%);
-  transition: all 1s ease-in;
-  margin: 0;
+  transition: all 1s;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+  animation: pulse 2s infinite;
 }
-
-.circleTransition3 {
+.purpleCircle {
+  background: #613f75;
+  height: 55px;
+  width: 55px;
+  border-radius: 50%;
   position: absolute;
   bottom: 50%;
   left: 50%;
   transform: translate(-50%, 50%);
-  transition: all 1s ease-in;
-  margin: 0;
+  transition: all 1s;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+  animation: pulse 2s infinite;
 }
-.circleTransition4 {
+.greyCircle {
+  background: #484349;
+  height: 55px;
+  width: 55px;
+  border-radius: 50%;
   position: absolute;
   bottom: 50%;
   right: 50%;
   transform: translate(50%, 50%);
-  transition: all 1s ease-in;
-  margin: 0;
+  transition: all 1s;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+  animation: pulse 2s infinite;
 }
+
+.circleTransition1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(-50%, -50%);
+  transition: all 1s ease-out;
+  margin: 100px;
+}
+
+.circleTransition2 {
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translate(50%, -50%);
+  transition: all 1s ease-out;
+  margin: 100px;
+}
+
+.circleTransition3 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transform: translate(-50%, 50%);
+  transition: all 1s ease-out;
+  margin: 100px;
+}
+.circleTransition4 {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  transform: translate(50%, 50%);
+  transition: all 1s ease-out;
+  margin: 100px;
+}
+
+/* #home {
+  position: fixed;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+} */
 
 @keyframes pulse {
   0% {
@@ -128,4 +131,24 @@
   100% {
     box-shadow: 0 0 0 15px rgba(0, 0, 0, 0);
   }
+}
+
+@media only screen and (max-width: 768px) {
+  /* .displayBox {
+    display: none;
+  } */
+}
+
+/* .fa-book-open {
+  font-size: 100px;
+  position: absolute;
+  top: 0;
+  left: 47%;
+} */
+
+.footer{
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
