--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -64,31 +64,35 @@
 }
 
 .fa-github {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  font-size: 50px;
+  font-size: 40px;
+  padding: 5px;
 }
 
 .fa-linkedin-in {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
-  font-size: 50px;
+  font-size: 40px;
+  padding: 5px;
 }
 
 .fa-wine-glass-alt {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   right: 0;
-  font-size: 50px;
+  font-size: 40px;
+  padding: 5px;
 }
 
 .fa-envelope {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
-  font-size: 50px;
+  font-size: 40px;
+  padding: 5px;
 }
 
 a {
