--- a/src/components/circles.css
+++ b/src/components/circles.css
@@ -27,7 +27,7 @@
   height: 55px;
   width: 55px;
   border-radius: 50%;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -41,7 +41,7 @@
   height: 55px;
   width: 55px;
   border-radius: 50%;
-  position: absolute;
+  position: fixed;
   top: 50%;
   right: 50%;
   transform: translate(50%, -50%);
@@ -54,7 +54,7 @@
   height: 55px;
   width: 55px;
   border-radius: 50%;
-  position: absolute;
+  position: fixed;
   bottom: 50%;
   left: 50%;
   transform: translate(-50%, 50%);
@@ -67,7 +67,7 @@
   height: 55px;
   width: 55px;
   border-radius: 50%;
-  position: absolute;
+  position: fixed;
   bottom: 50%;
   right: 50%;
   transform: translate(50%, 50%);
@@ -77,7 +77,7 @@
 }
 
 .circleTransition1 {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   transform: translate(-50%, -50%);
@@ -86,7 +86,7 @@
 }
 
 .circleTransition2 {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   transform: translate(50%, -50%);
@@ -95,7 +95,7 @@
 }
 
 .circleTransition3 {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   transform: translate(-50%, 50%);
@@ -103,7 +103,7 @@
   margin: 100px;
 }
 .circleTransition4 {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   right: 0;
   transform: translate(50%, 50%);
