--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,9 @@
   font-family: "Montserrat", sans-serif;
   text-align: center;
 }
+
+.testContainer{
+  border: 2px solid black;
+  height: 30%;
+  width: 50%;
+}
