--- a/src/components/circles.css
+++ b/src/components/circles.css
@@ -82,7 +82,8 @@
   left: 0;
   transform: translate(-50%, -50%);
   transition: all 1s ease-out;
-  margin: 100px;
+  /* margin: 100px; */
+  margin: 50px;
 }
 
 .circleTransition2 {
@@ -91,7 +92,8 @@
   right: 0;
   transform: translate(50%, -50%);
   transition: all 1s ease-out;
-  margin: 100px;
+  /* margin: 100px; */
+  margin: 50px;
 }
 
 .circleTransition3 {
@@ -100,7 +102,8 @@
   left: 0;
   transform: translate(-50%, 50%);
   transition: all 1s ease-out;
-  margin: 100px;
+  /* margin: 100px; */
+  margin: 50px;
 }
 .circleTransition4 {
   position: fixed;
@@ -108,16 +111,9 @@
   right: 0;
   transform: translate(50%, 50%);
   transition: all 1s ease-out;
-  margin: 100px;
+  /* margin: 100px; */
+  margin: 50px;
 }
-
-/* #home {
-  position: fixed;
-  top: 70%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  margin: 0;
-} */
 
 @keyframes pulse {
   0% {
@@ -133,22 +129,27 @@
   }
 }
 
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 @media only screen and (max-width: 768px) {
   /* .displayBox {
     display: none;
   } */
 }
 
-/* .fa-book-open {
-  font-size: 100px;
+.fa-book-open {
+  font-size: 50px;
   position: absolute;
-  top: 0;
-  left: 47%;
-} */
-
-.footer {
-  position: fixed;
-  bottom: 0;
+  top: 5%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.bookNav{
+  color:black;
 }
