--- a/src/components/entries.css
+++ b/src/components/entries.css
@@ -78,8 +78,15 @@ h1 {
 }
 
 img {
-  max-width: 100%;
+  width: 100%;
   height: 40%;
   margin-top: 12%;
   animation: fadein 2s;
+}
+
+.entryContainer {
+  border: 2px solid black;
+  height: 25%;
+  width: 100%;
+  overflow: scroll;
 }
