--- a/src/components/projects.css
+++ b/src/components/projects.css
@@ -78,11 +78,8 @@ h1 {
 }
 
 img {
-  max-width: 100%;
+  width: 100%;
   height: 40%;
   margin-top: 12%;
   animation: fadein 2s;
-}
-img:hover {
-  opacity: 0.9;
 }
