--- a/src/components/about.css
+++ b/src/components/about.css
@@ -52,31 +52,77 @@ h1 {
   }
 }
 
+.entryContainer {
+  border: 2px solid black;
+  height: 0;
+  width: 100%;
+  overflow: scroll;
+  transition: all 1s;
+}
+
+.expand {
+  height: 200px;
+  top: 50%;
+}
+
 .aboutContainer {
   position: fixed;
   top: 50%;
   left: 27%;
   transform: translate(-50%, -50%);
-  height: 100%;
   width: 30%;
   overflow: scroll;
-  z-index: 1;
 }
 
 .inspoContainer {
-  position: fixed;
+  position: absolute;
   top: 50%;
   right: 27%;
   transform: translate(50%, -50%);
-  height: 100%;
   width: 30%;
   overflow: scroll;
-  z-index: 1;
 }
 
 .aboutImages {
   width: 100%;
-  height: 35%;
+  height: 40%;
   animation: fadein 2s;
-  margin-top: 50%;
+}
+
+@media only screen and (max-width: 768px) and (min-width: 426px) {
+  .aboutContainer {
+    position: fixed;
+    top: 50%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    width: 30%;
+    overflow: scroll;
+  }
+
+  .inspoContainer {
+    position: absolute;
+    top: 50%;
+    right: 25%;
+    transform: translate(50%, -50%);
+    width: 30%;
+    overflow: scroll;
+  }
+
+  .aboutImages {
+    width: 100%;
+    height: 150px;
+    animation: fadein 2s;
+  }
+  .entryContainer {
+    border: 2px solid black;
+    height: 0;
+    width: 100%;
+    overflow: scroll;
+    transition: all 1s;
+  }
+
+  .expand {
+    height: 100px;
+    top: 50%;
+  }
 }
