--- a/src/components/circles.css
+++ b/src/components/circles.css
@@ -82,8 +82,7 @@
   left: 0;
   transform: translate(-50%, -50%);
   transition: all 1s ease-out;
-  /* margin: 100px; */
-  margin: 50px;
+  margin: 100px;
 }
 
 .circleTransition2 {
@@ -92,8 +91,7 @@
   right: 0;
   transform: translate(50%, -50%);
   transition: all 1s ease-out;
-  /* margin: 100px; */
-  margin: 50px;
+  margin: 100px;
 }
 
 .circleTransition3 {
@@ -102,8 +100,7 @@
   left: 0;
   transform: translate(-50%, 50%);
   transition: all 1s ease-out;
-  /* margin: 100px; */
-  margin: 50px;
+  margin: 100px;
 }
 .circleTransition4 {
   position: fixed;
@@ -111,8 +108,7 @@
   right: 0;
   transform: translate(50%, 50%);
   transition: all 1s ease-out;
-  /* margin: 100px; */
-  margin: 50px;
+  margin: 100px;
 }
 
 @keyframes pulse {
@@ -136,12 +132,6 @@
   transform: translate(-50%, -50%);
 }
 
-@media only screen and (max-width: 768px) {
-  /* .displayBox {
-    display: none;
-  } */
-}
-
 .fa-book-open {
   font-size: 50px;
   position: absolute;
@@ -150,6 +140,115 @@
   transform: translate(-50%, -50%);
 }
 
-.bookNav{
-  color:black;
+@media only screen and (max-width: 768px) and (min-width: 426px) {
+  .circlesContainer {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 10px solid black;
+    height: 125px;
+    width: 125px;
+  }
+
+  .dotCircle {
+    position: fixed;
+    background: black;
+    border: 5px solid black;
+    height: 45px;
+    width: 45px;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+    animation: pulse 2s infinite;
+  }
+
+  .blueCircle {
+    background: #124e78;
+    height: 45px;
+    width: 45px;
+    border-radius: 50%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: all 1s;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+    animation: pulse 2s infinite;
+  }
+
+  .redCircle {
+    background: #6e0e0a;
+    height: 45px;
+    width: 45px;
+    border-radius: 50%;
+    position: fixed;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%, -50%);
+    transition: all 1s;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+    animation: pulse 2s infinite;
+  }
+  .purpleCircle {
+    background: #613f75;
+    height: 45px;
+    width: 45px;
+    border-radius: 50%;
+    position: fixed;
+    bottom: 50%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    transition: all 1s;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+    animation: pulse 2s infinite;
+  }
+  .greyCircle {
+    background: #484349;
+    height: 45px;
+    width: 45px;
+    border-radius: 50%;
+    position: fixed;
+    bottom: 50%;
+    right: 50%;
+    transform: translate(50%, 50%);
+    transition: all 1s;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+    animation: pulse 2s infinite;
+  }
+  .circleTransition1 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    transform: translate(-50%, -50%);
+    transition: all 1s ease-out;
+    margin: 50px;
+  }
+  .circleTransition2 {
+    position: fixed;
+    top: 0;
+    right: 0;
+    transform: translate(50%, -50%);
+    transition: all 1s ease-out;
+    margin: 50px;
+  }
+
+  .circleTransition3 {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    transform: translate(-50%, 50%);
+    transition: all 1s ease-out;
+    margin: 50px;
+  }
+  .circleTransition4 {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    transform: translate(50%, 50%);
+    transition: all 1s ease-out;
+    margin: 50px;
+  }
 }
