--- a/src/components/projects.css
+++ b/src/components/projects.css
@@ -83,3 +83,37 @@ img {
   margin-top: 12%;
   animation: fadein 2s;
 }
+
+@media only screen and (max-width: 768px) and (min-width: 426px) {
+  .projectContainer1 {
+    position: fixed;
+    top: 50%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    height: 90%;
+    width: 30%;
+    overflow: scroll;
+    z-index: 1;
+  }
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
+  .projectContainer2 {
+    position: fixed;
+    top: 50%;
+    right: 25%;
+    transform: translate(50%, -50%);
+    height: 90%;
+    width: 30%;
+    overflow: scroll;
+    z-index: 1;
+  }
+  img {
+    width: 100%;
+    height: 40%;
+    animation: fadein 2s;
+  }
+}
+@media only screen and (max-width: 425px) {
+}
