--- a/src/components/BlogEntry.css
+++ b/src/components/BlogEntry.css
@@ -1,3 +1,11 @@
+.entryImages {
+  top: 50%;
+  width: 100%;
+  height: 25%;
+  animation: fadein 2s;
+  margin-top: 10%;
+}
+
 @media only screen and (max-width: 768px) and (min-width: 426px) {
   .entryImages {
     top: 50%;
