--- a/src/components/entries.css
+++ b/src/components/entries.css
@@ -14,6 +14,7 @@ h1 {
   margin: 15%;
 }
 
+
 @keyframes fadein {
   from {
     opacity: 0;
@@ -77,13 +78,6 @@ h1 {
   z-index: 1;
 }
 
-img {
-  width: 100%;
-  height: 40%;
-  margin-top: 12%;
-  animation: fadein 2s;
-}
-
 .entryContainer {
   border: 2px solid black;
   height: 0;
@@ -123,9 +117,7 @@ img {
     overflow: scroll;
     z-index: 1;
   }
- */
-
-  .entryContainer {
+  */ .entryContainer {
     border: 2px solid black;
     height: 0;
     width: 100%;
